test/error/PreUnknown.fu
public static class Test
{
	public static bool Run()
	{
#iftrue //ERROR: Invalid expression //ERROR: Expected ';', got unknown preprocessor directive
#foo //ERROR: Expected ';', got unknown preprocessor directive
#elf //ERROR: Expected ';', got unknown preprocessor directive
#enlarge //ERROR: Expected ';', got unknown preprocessor directive
		return true; //ERROR: Expected ';', got 'return'
	}
}
